fix: 💄 Enhance visualisation of the Tutorial on mobile

--- a/repl/src/tutorial/style.css
+++ b/repl/src/tutorial/style.css
@@ -8,6 +8,6 @@
   height: inherit !important;
 }
 
-.justify-center {
-  justify-content: center;
+main {
+  margin: 0 auto;
 }
